--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,21 @@
 .app {
-  background-color: rgb(82, 82, 82);
+  // background-image: url(../pictures/picture12.jpg);
+  // background-image: linear-gradient(rgb(82, 82, 82), rgb(25, 25, 25));
   height: 100vh;
   width: 100vw;
+  background-repeat: no-repeat;
+  object-fit: fill;
+  position: static;
+  top: 0;
+}
+#appBackground {
+  background-image: linear-gradient(rgb(82, 82, 82), rgb(25, 25, 25));
+  // background-color: salmon;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  z-index: -1;
 }
 .header {
   width: 100vw;
@@ -10,9 +24,14 @@
   display: flex;
   justify-content: space-between;
   padding: 30px 0 30px 0;
+  position: fixed;
+  top: 0;
+  z-index: 3;
 }
 .wrapper1 {
   display: flex;
+  width: 100%;
+  z-index: 2;
 }
 .logo {
   width: 30px;
@@ -33,19 +52,30 @@
   font-size: 30px;
   font-family: "Times New Roman", Times, serif;
   height: 57px;
+  width: 350px;
   background-color: rgb(94, 12, 101);
 }
 .dropdown {
-  background-color: green;
-  width: 80px;
+  background-color: rgb(82, 82, 82);
+  color: white;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 18px;
+  min-width: 80px;
   height: 80px;
   margin-right: 30px;
+  border: none;
+  //   float: right;
 }
-.dropdownBar {
-  color: black;
-  width: 30px;
-  height: 80px;
-  //   margin: 1px 0 1px 0;
+.dropdown:hover {
+  cursor: pointer;
+}
+.dropdown:focus {
+  outline: none;
+}
+.unstyled {
+  outline: none;
+  text-decoration: none;
+  color: white;
 }
 .sideScroll {
   width: 100vw;
@@ -62,27 +92,22 @@
   overflow-x: scroll;
 }
 
-.cdk-virtual-scroll-data-source-example .example-viewport {
-  margin-top: 10%;
-  height: 400px;
+.sideScroll2 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15vh;
+  height: 500px;
   width: 100vw;
-  border: 1px solid black;
   background-color: lightcoral;
 }
 
-.cdk-virtual-scroll-data-source-example
-  .example-viewport
-  .cdk-virtual-scroll-content-wrapper {
-  display: flex;
-  flex-direction: row;
-}
-
-.cdk-virtual-scroll-data-source-example .example-item {
-  width: 50px;
-  height: 100%;
+.picture2 {
+  width: 350px;
+  height: 500px;
   writing-mode: horizontal-tb;
   background-color: white;
-  margin-bottom: 5px;
+  display: inline-block;
+  border: 1px solid pink;
 }
 
 // Recovered from previous app
@@ -118,135 +143,116 @@
 //   box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.6);
 // }
 
-// #picture01 {
-//   background: url(../../../pictures/picture01.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture02 {
-//   background: url(../../../pictures/picture02.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture03 {
-//   background: url(../../../pictures/picture03.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture04 {
-//   background: url(../../../pictures/picture04.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture05 {
-//   background: url(../../../pictures/picture05.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture06 {
-//   background: url(../../../pictures/picture06.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 100% 50%;
-// }
-// #picture07 {
-//   background: url(../../../pictures/picture07.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture08 {
-//   background: url(../../../pictures/picture08.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture09 {
-//   background: url(../../../pictures/picture09.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 0% 50%;
-// }
-// #picture10 {
-//   background: url(../../../pictures/picture10.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 0% 50%;
-// }
-// #picture11 {
-//   background: url(../../../pictures/picture11.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture12 {
-//   background: url(../../../pictures/picture12.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture13 {
-//   background: url(../../../pictures/picture13.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture14 {
-//   background: url(../../../pictures/picture14.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 50% 50%;
-// }
-// #picture15 {
-//   background: url(../../../pictures/picture15.jpg);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: 0% 50%;
-// }
+.sideScroll3 .example-viewport {
+  margin-top: 300px;
+  height: 500px;
+  width: 100vw;
+  border: 1px solid black;
+  box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.6);
+}
 
-//App.js:
+.sideScroll3 .example-viewport .cdk-virtual-scroll-content-wrapper {
+  display: flex;
+  flex-direction: row;
+}
 
-// import React, { Component } from "react";
-// import { BrowserRouter as Router, Route, Link } from "react-router-dom";
-// import "./App.css";
-// import "./Reset.css";
-// import Header from "./pages/Header/Header";
+.sideScroll3 .example-item {
+  //   width: 400px;
+  height: 100%;
+  writing-mode: horizontal-tb;
+}
 
-// import Home from "./pages/Home/Home";
-// import Contact from "./pages/Contact/Contact";
-// import Gallery from "./pages/Gallery/Gallery";
+.pictures3 {
+  display: flex;
+}
 
-// class App extends Component {
-//   constructor() {
-//     super();
-//     this.state = {
-//       navBar: "hidden",
-//       page: "home"
-//     };
-//     this.toggleNav = this.toggleNav.bind(this);
-//   }
-//   toggleNav() {}
-//   render() {
-//     return (
-//       <>
-//         <Header />
-//         <Router>
-//           <div className='links'>
-//           <Link to="/">Home</Link> <Link to="/contact">Contact Us</Link>{" "}
-//           <Link to="/gallery">Gallery</Link>
-//           </div>
-//           <Route exact path="/" component={Home} />
-//           <Route path="/gallery" component={Gallery} />
-//           <Route path="/contact" component={Contact} />
-//         </Router>
-//       </>
-//     );
-//   }
-// }
+.homePicture {
+  width: 400px;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
-// export default App;
+#picture01 {
+  background-image: url(../pictures/picture01.jpg);
+  background-position: 50% 50%;
+}
+#picture02 {
+  background-image: url(../pictures/picture02.jpg);
+  background-position: 50% 50%;
+}
+#picture03 {
+  background-image: url(../pictures/picture03.jpg);
+  background-position: 50% 50%;
+}
+#picture04 {
+  background-image: url(../pictures/picture04.jpg);
+  background-position: 50% 50%;
+}
+#picture05 {
+  background-image: url(../pictures/picture05.jpg);
+  background-position: 50% 50%;
+}
+#picture06 {
+  background-image: url(../pictures/picture06.jpg);
+  background-position: 10% 50%;
+}
+#picture07 {
+  background-image: url(../pictures/picture07.jpg);
+  background-position: 0% 50%;
+}
+#picture08 {
+  background-image: url(../pictures/picture08.jpg);
+  background-position: 50% 50%;
+}
+#picture09 {
+  background-image: url(../pictures/picture09.jpg);
+  background-position: 0% 50%;
+}
+#picture10 {
+  background-image: url(../pictures/picture10.jpg);
+  background-position: 0% 50%;
+}
+#picture11 {
+  background-image: url(../pictures/picture11.jpg);
+  background-position: 50% 50%;
+}
+#picture12 {
+  background-image: url(../pictures/picture12.jpg);
+  background-position: 80% 50%;
+}
+#picture13 {
+  background-image: url(../pictures/picture13.jpg);
+  background-position: 17% 50%;
+}
+#picture14 {
+  background-image: url(../pictures/picture14.jpg);
+  background-position: 50% 50%;
+}
+#picture15 {
+  background-image: url(../pictures/picture15.jpg);
+  background-position: 30% 50%;
+}
+
+@media (max-width: 700px) {
+  .title {
+    // display: none;
+    width: 110px;
+    font-size: 22px;
+    padding-left: 10px;
+  }
+  .sideScroll3 .example-viewport {
+    height: 250px;
+  }
+  .homePicture {
+    width: 150px;
+  }
+  .picture12 {
+    background-position: 100% 0%;
+  }
+}
+@media (max-width: 400px) {
+  .title {
+    display: none;
+  }
+}
