working on sidescrolling from desktop

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,7 @@
       itemSize="50"
       class="example-viewport"
     >
+      <div ng-click="myFunc()" class="scrollButton" id="scrollLeft"><</div>
       <div class="pictures3">
         <div class="homePicture" id="picture01"></div>
         <div class="homePicture" id="picture02"></div>
@@ -22,6 +23,7 @@
         <div class="homePicture" id="picture14"></div>
         <div class="homePicture" id="picture15"></div>
       </div>
+      <div class="scrollButton" id="scrollRight">></div>
     </cdk-virtual-scroll-viewport>
   </div>
 </div>
