--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -77,38 +77,6 @@
   text-decoration: none;
   color: white;
 }
-.sideScroll {
-  width: 100vw;
-  background-color: lightcoral;
-  height: 400px;
-  margin-top: 10vh;
-  display: flex;
-}
-.picture {
-  height: 400px;
-  min-width: 300px;
-  background-color: pink;
-  border: 1px solid red;
-  overflow-x: scroll;
-}
-
-.sideScroll2 {
-  display: flex;
-  flex-direction: row;
-  margin-top: 15vh;
-  height: 500px;
-  width: 100vw;
-  background-color: lightcoral;
-}
-
-.picture2 {
-  width: 350px;
-  height: 500px;
-  writing-mode: horizontal-tb;
-  background-color: white;
-  display: inline-block;
-  border: 1px solid pink;
-}
 
 // Recovered from previous app
 //Styles:
@@ -149,11 +117,13 @@
   width: 100vw;
   border: 1px solid black;
   box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.6);
+  position: fixed;
 }
 
 .sideScroll3 .example-viewport .cdk-virtual-scroll-content-wrapper {
   display: flex;
   flex-direction: row;
+  // position: static;
 }
 
 .sideScroll3 .example-item {
@@ -236,7 +206,6 @@
 
 @media (max-width: 700px) {
   .title {
-    // display: none;
     width: 110px;
     font-size: 22px;
     padding-left: 10px;
@@ -251,7 +220,12 @@
     background-position: 100% 0%;
   }
 }
-@media (max-width: 400px) {
+@media (max-height: 699px) {
+  .sideScroll3 .example-viewport {
+    margin-top: 250px;
+  }
+}
+@media (max-width: 374px) {
   .title {
     display: none;
   }
