coming back to this project

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -144,51 +144,51 @@
 }
 
 #picture01 {
-  background-image: url(../pictures/picture01.jpg);
+  background-image: url(../pictures/KryPhoto01.jpg);
   background-position: 50% 50%;
 }
 #picture02 {
-  background-image: url(../pictures/picture02.jpg);
+  background-image: url(../pictures/KryPhoto02.jpg);
   background-position: 50% 50%;
 }
 #picture03 {
-  background-image: url(../pictures/picture03.jpg);
+  background-image: url(../pictures/KryPhoto03.jpg);
   background-position: 50% 50%;
 }
 #picture04 {
-  background-image: url(../pictures/picture04.jpg);
+  background-image: url(../pictures/KryPhoto04.jpg);
   background-position: 50% 50%;
 }
 #picture05 {
-  background-image: url(../pictures/picture05.jpg);
+  background-image: url(../pictures/KryPhoto05.jpg);
   background-position: 50% 50%;
 }
 #picture06 {
-  background-image: url(../pictures/picture06.jpg);
+  background-image: url(../pictures/KryPhoto06.jpg);
   background-position: 10% 50%;
 }
 #picture07 {
-  background-image: url(../pictures/picture07.jpg);
+  background-image: url(../pictures/KryPhoto07.jpg);
   background-position: 0% 50%;
 }
 #picture08 {
-  background-image: url(../pictures/picture08.jpg);
+  background-image: url(../pictures/KryPhoto08.jpg);
   background-position: 50% 50%;
 }
 #picture09 {
-  background-image: url(../pictures/picture09.jpg);
+  background-image: url(../pictures/KryPhoto09.jpg);
   background-position: 0% 50%;
 }
 #picture10 {
-  background-image: url(../pictures/picture10.jpg);
+  background-image: url(../pictures/KryPhoto10.jpg);
   background-position: 0% 50%;
 }
 #picture11 {
-  background-image: url(../pictures/picture11.jpg);
+  background-image: url(../pictures/KryPhoto11.jpg);
   background-position: 50% 50%;
 }
 #picture12 {
-  background-image: url(../pictures/picture12.jpg);
+  background-image: url(../pictures/KryPhoto12.jpg);
   background-position: 80% 50%;
 }
 #picture13 {
