--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,25 +5,25 @@
       itemSize="50"
       class="example-viewport"
     >
-      <div ng-click="myFunc()" class="scrollButton" id="scrollLeft"><</div>
+      <!-- <div ng-click="myFunc()" class="scrollButton" id="scrollLeft"><</div> -->
       <div class="pictures3">
-        <div class="homePicture" id="picture01"></div>
         <div class="homePicture" id="picture02"></div>
-        <div class="homePicture" id="picture03"></div>
+        <div class="homePicture" id="picture07"></div>
         <div class="homePicture" id="picture04"></div>
         <div class="homePicture" id="picture05"></div>
+        <div class="homePicture" id="picture01"></div>
         <div class="homePicture" id="picture06"></div>
-        <div class="homePicture" id="picture07"></div>
         <div class="homePicture" id="picture08"></div>
-        <div class="homePicture" id="picture09"></div>
         <div class="homePicture" id="picture10"></div>
         <div class="homePicture" id="picture11"></div>
         <div class="homePicture" id="picture12"></div>
-        <div class="homePicture" id="picture13"></div>
+        <div class="homePicture" id="picture09"></div>
+        <div class="homePicture" id="picture03"></div>
+        <!-- <div class="homePicture" id="picture13"></div>
         <div class="homePicture" id="picture14"></div>
-        <div class="homePicture" id="picture15"></div>
+        <div class="homePicture" id="picture15"></div> -->
       </div>
-      <div class="scrollButton" id="scrollRight">></div>
+      <!-- <div class="scrollButton" id="scrollRight">></div> -->
     </cdk-virtual-scroll-viewport>
   </div>
 </div>
