--- a/src/app/cinema/cinema.component.html
+++ b/src/app/cinema/cinema.component.html
@@ -1,14 +1,16 @@
-<div id="galleryHeader">
-  <div class="buttons">
-    <button class="button" [routerLink]="['/gallery']">
-      Gallery
-    </button>
-    <button class="button" [routerLink]="['/weddings']">
-      Weddings
-    </button>
-    <button class="selectedButton">
-      Cinematography
-    </button>
+<div class="stickyScroll">
+  <div id="galleryHeader">
+    <div class="buttons">
+      <button class="button" [routerLink]="['/gallery']">
+        Gallery
+      </button>
+      <button class="button" [routerLink]="['/weddings']">
+        Weddings
+      </button>
+      <button class="selectedButton">
+        Cinematography
+      </button>
+    </div>
   </div>
 </div>
 
