--- a/src/app/weddings/weddings.component.scss
+++ b/src/app/weddings/weddings.component.scss
@@ -9,9 +9,12 @@
     rgb(71, 71, 71),
     rgb(71, 71, 71)
   );
-  position: fixed;
+  position: sticky;
   top: 140px;
-  z-index: 3;
+  z-index: 0;
+}
+.stickyScroll {
+  height: 300px;
 }
 .buttons {
   margin-left: 200px;
@@ -54,7 +57,6 @@
   box-shadow: 10px 10px 5px -10px black inset;
   .selectedButton {
     box-shadow: none;
-    background-color: green;
   }
 }
 .button:active {
@@ -70,7 +72,7 @@
   font-weight: bolder;
 }
 #wrapper3 {
-  margin-top: 320px;
+  margin-top: 0px;
   z-index: 2;
 }
 
